Resolvi el problema con Agregar productos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="botones">
     <button id="botonAgregar">Agregar producto</button>
     <button id="botonEliminar">Eliminar</button>
-    <button>Mostrar listado</button>
+    <button id="botonMostrar">Mostrar listado</button>
 </div>
 
     
