--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <button id="botonEliminar">Eliminar</button>
     <button id="botonMostrar">Mostrar listado</button>
 </div>
-
+<div id="muestraProductos"></div>
     
 
 <script src="main.js"></script>
